carrousell overflow page fixed

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   background-color: var(--common-white);
   overflow-x: hidden;
