--- a/src/pages/home/styles/style.css
+++ b/src/pages/home/styles/style.css
@@ -3,18 +3,15 @@
 }
 
 .slick-slide {
-  max-height: 100vh;
-  width: 100vw;
+  height: inherit !important;
 }
 
 .slick-slide > div {
-  max-height: 100vh;
-  width: 100vw;
-  overflow: hidden;
+  height: 100%;
 }
 
 .slick-slide > div > img {
-  max-height: 100vh;
+  height: 100%;
   width: 100vw;
   overflow: hidden;
   filter: brightness(0.7);
